Style scrollbar, fix channel modal styling

--- a/app/assets/stylesheets/channel_sidebar.scss
+++ b/app/assets/stylesheets/channel_sidebar.scss
@@ -47,16 +47,50 @@ span.public-channels-button:hover {
   font-family: 'Lato', sans-serif;
   // text-indent: 15px;
   flex-direction: column;
-  max-height: 36.3vh;
+  max-height: 34.8vh;
   overflow-y: auto;
   overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
 
+::-webkit-scrollbar-track {
+    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #f3f3f3;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #d9d9de;
+    border-top: 2px solid #FFFFFF;
+    border-bottom: 3px solid #FFFFFF;
+    height: 15vh;
+    width: 70%;
+    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
+ul.channels-list::-webkit-scrollbar-track {
+  background-color: #3e313c;
+}
+
+ul.channels-list::-webkit-scrollbar-thumb {
+  background-color: #8a8089;
+  border-top: 2px solid #bcabba;
+  border-bottom: 3px solid #bcabba;
+
+}
+
+// ul.channels-list::-webkit-scrollbar {
+//   // width: 50%;
+//   background-color: yellow;
+// }
 
 .general-channels {
   margin-top: 5px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 
